Lose the user gesture expiration check on IdentifyReferrerChainByWebContents

This change will help better attribute HTML5 File API downloads and crx
extension download case.

BUG=723089

Review-Url: https://codereview.chromium.org/2892483002
Cr-Commit-Position: refs/heads/master@{#472849}

Former-commit-id: c72f3c4c940c6ada4e0447bfd2dd5dfdf532fdf1